plugins {
  id 'application'
}

repositories {
  mavenCentral()
  mavenLocal()
}

dependencies {
  implementation 'edu.uiowa.cs.clc:kind2-java-api:0.9.0'
  implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.13.0'
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
}

// --release requires javac 9+; a Java 8 JDK already targets Java 8
if (JavaVersion.current().isJava9Compatible()) {
  tasks.withType(JavaCompile).configureEach {
    options.release = 8
  }
}

test {
  useJUnitPlatform()
}

mainClassName = "edu.uiowa.kind2.lsp.Main"
